assets/css/app.scss
/*!

=========================================================
* Argon Dashboard PRO - v1.2.1
=========================================================

* Product Page: https://www.creative-tim.com/product/argon-dashboard-pro
* Copyright 2021 Creative Tim (https://www.creative-tim.com)

* Coded by www.creative-tim.com

=========================================================

* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

*/



// Bootstrap functions
@import "bootstrap/scss/functions";
@import "bootstrap/scss/mixins";

// Argon functions
@import "custom/functions";

// Light mode Variables - Disabled by default
// @import "custom/light-variables";

// Dark mode Variables - Enabled by default
@import "custom/dark-variables";

@import "bootstrap/scss/variables";

// Argon mixins
@import "custom/mixins";

// Bootstrap components
@import "bootstrap/scss/root";
@import "bootstrap/scss/reboot";
@import "bootstrap/scss/type";
@import "bootstrap/scss/images";
@import "bootstrap/scss/code";
@import "bootstrap/scss/grid";
@import "bootstrap/scss/tables";
@import "bootstrap/scss/forms";
@import "bootstrap/scss/buttons";
@import "bootstrap/scss/transitions";
@import "bootstrap/scss/dropdown";
@import "bootstrap/scss/button-group";
@import "bootstrap/scss/input-group";
@import "bootstrap/scss/custom-forms";
@import "bootstrap/scss/nav";
@import "bootstrap/scss/navbar";
@import "bootstrap/scss/card";
@import "bootstrap/scss/breadcrumb";
@import "bootstrap/scss/pagination";
@import "bootstrap/scss/badge";
@import "bootstrap/scss/jumbotron";
@import "bootstrap/scss/alert";
@import "bootstrap/scss/progress";
@import "bootstrap/scss/media";
@import "bootstrap/scss/list-group";
@import "bootstrap/scss/close";
@import "bootstrap/scss/modal";
@import "bootstrap/scss/tooltip";
@import "bootstrap/scss/popover";
@import "bootstrap/scss/carousel";
@import "bootstrap/scss/utilities";
@import "bootstrap/scss/print";
@import "bootstrap/scss/spinners";

// Argon components
@import 'custom/components';
@import 'custom/utilities';
@import 'custom/vendors';

// For Specific Pages
@import 'pages/namer';

.logo-img {
  width: 150px;
}

.dashboard-bg {
  min-height: 100vh;
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
  overflow: hidden;

  .waves {
    position: absolute;
    top: -70px;
  }

  .fill {
    position: absolute;
    top: 400px;
    bottom: 0;
    width: 100%;
  }
}

.header .waves {
  position: absolute;
  top: -70px;
}

.header .waves {
  position: absolute;
  top: -70px;
}

.custom-radio-lg {
  .custom-control-label {
    font-size: 1.5em !important;

    &::before,
    &::after {
      margin-top: 6px;
    }
  }
}

.activity-map {
  height: 500px;
}

#activity-chart {
  height: 200px;
  width: 100%;
}

.ais-InfiniteHits-list,
.ais-Hits-list,
.ais-RefinementList-list,
.ais-CurrentRefinements-list {
  list-style: none;
  padding: 0;
}

.container-dashboard {
  max-width: 1440px;
}

.bg-terrain {
  // background-image: url('/images/bg-terrain.jpg');
}

.calendar-row:nth-child(even) {
  .calendar-item:nth-child(odd) {
    background-color: lighten($card-bg, 5%);
  }
}

.calendar-row:nth-child(odd) {
  .calendar-item:nth-child(even) {
    background-color: lighten($card-bg, 5%);
  }
}

.calendar-item {
  aspect-ratio: 1/1;
}

.segment-list {
  max-height: 500px;
}

// Add these rules to allow a vertically scrollable table with a sticky header
.table-responsive {
  overflow: auto;
}
.table-responsive thead th { position: sticky; top: 0; z-index: 1; }

